# dagster-gis-example

./: .env  .gitignore  Makefile  README.md  pyproject.toml
antarcticmap/: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
antarcticmap/antarcticmap/: assets.py
docker/: docker-compose.dev.yml  static.conf
